fix: fix responsive layout issue

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1155,6 +1155,18 @@ header .dropdown button {
     }
 
     .task-details-page {
-        padding: var(--space-2);
+        padding: var(--space-5) var(--space-2) var(--space-2) var(--space-2);
+    }
+
+    .panel .featured .tasks-wrapper {
+        flex-direction: column;
+    }
+
+    .panel .task-card.card-featured {
+        padding: var(--space-2) var(--space-2);
+    }
+
+    .panel .featured .tasks-wrapper {
+        padding: var(--space-2) var(--space-2);
     }
 }
